Update whole app

--- a/app/components/About/About.scss
+++ b/app/components/About/About.scss
@@ -1,7 +1,18 @@
+@import "../../styles/index";
+
+.root {
+  @extend %page;
+}
+
 .title {
   opacity: 0.8;
 }
+
 .button {
   margin-top: 20px;
   width: 200px;
+}
+
+.graph {
+  width: 100%;
 }
