--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -2,8 +2,8 @@
 @import "./animation.scss";
 
 body {
-  background-image: linear-gradient(to right, #2c3742 0%, #1a191b 100%);
-  color: #fff;
+  // background-image: linear-gradient(to right, #2c3742 0%, #1a191b 100%);
+  // color: #fff;
   padding: 0;
   margin: 0;
   font-family: "Open Sans";
