--- a/app/components/Cards/Card/Card.scss
+++ b/app/components/Cards/Card/Card.scss
@@ -1,10 +1,9 @@
 .elememnt {
   display: flex;
   width: 100%;
-  height: 120px;
-  background: #f3f3f3;
+  background: #fff;
   border-radius: 6px;
   justify-content: center;
   align-items: center;
-  box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 20px 2px rgba(140, 140, 140, 0.02);
 }
